change styling slightly

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <img src="/assets/logos/logo.svg" width="200" alt="Logo for Peakboard">
                     </div>
                         <div class="mr-12 mt-12 md:mt-0">
-                            <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white">{{ text.footer-github }}</h3>
+                            <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white dot">{{ text.footer-github }}</h3>
                             <p class="mb-3 font-bold text-white">
                                     {% if page.layout == 'home' %}
                                         <a href="https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates" class="text-white no-underline hover:underline font-light" target="_blank">{{ text.footer-github-text }}</a>
@@ -18,7 +18,7 @@
                             </p>
                         </div>
                     <div class="mr-12 mt-12 md:mt-0">
-                        <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white">{{ text.footer-support }}</h3>
+                        <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white dot">{{ text.footer-support }}</h3>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-tel }}
                             <a href="tel:004971146059961" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 - 61</a>
                         </p>
@@ -27,7 +27,7 @@
                         </p>
                     </div>
                     <div class="mr-12 mt-12 md:mt-0">
-                        <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white">{{ text.footer-contact }}</h3>
+                        <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white dot">{{ text.footer-contact }}</h3>
                         <p class="mb-3 font-bold text-white">{{ text.footer-contact-email }}
                             <a href="mailto:info@peakboard.com" class="text-white no-underline hover:underline font-light">info@peakboard.com</a>
                         </p>
