--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -4,7 +4,7 @@
             <img src="/assets/images/homepage/logistics_vector.svg" alt="logistics image" />
         </div>
         <div class="text-center">
-            <h1 class="font-extrabold text-4xl text-white font-title">{{ site.language[page.lang].homepage-top-section-title }}</h1>
+            <h1 class="font-extrabold text-4xl text-white font-title dot">{{ site.language[page.lang].homepage-top-section-title }}</h1>
             <p class="my-3 text-white text-lg">{{ site.language[page.lang].homepage-top-section-content }}</p>
         </div>
         <div class="hidden sm:block transform translate-x-20">
@@ -36,7 +36,7 @@
             </svg>
 
             <div class="mt-4 w-full">
-                <h2 class="font-title font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-extensions }}</h2>
+                <h2 class="font-title font-extrabold text-4xl mb-2 dot">{{ site.language[page.lang].homepage-top-section-extensions }}</h2>
                 <p class="mb-4">{{ site.language[page.lang].homepage-top-section-extensions-text }}</p>
             </div>
 
