--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,9 +13,9 @@ layout: base
         </div>
         <div class="w-full lg:w-3/4 px-2">
             <div class="flex flex-col mb-4">
-                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}</h2>
-                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}</h2>
-                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 hidden" id="header-search">{{ site.language[page.lang].homepage-top-section-search }}</h2>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 dot" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}</h2>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 dot hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}</h2>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 dot hidden" id="header-search">{{ site.language[page.lang].homepage-top-section-search }}</h2>
             </div>
         </div>
     </div>
