small css change for text paragraphs not working in firefox

--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -227,14 +227,14 @@ html {
       font-style: normal;
       font-size: 1rem;
       line-height: 1.5;
-      -webkit-margin-after: 1em;
+      margin-bottom: 1em;
   }
   td {
     font-weight: 300;
     font-style: normal;
     font-size: 0.8rem;
     line-height: 2;
-    -webkit-margin-after: 1em;
+    margin-bottom: 1em;
   }
 
   ol,
