--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,9 @@
                             <p class="mb-3 font-bold text-white">
                                     {% if page.layout == 'home' %}
                                         <a href="https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates" class="text-white no-underline hover:underline font-light" target="_blank">{{ text.footer-github-text }}</a>
-                                    {% else %}
+                                    {% elsif page.extension_category %}
+                                        <a href="{% include github-link.html extensions=true %}" class="text-white no-underline hover:underline font-light" target="_blank">{{ text.footer-github-text }}</a>
+                                {% else %}
                                         <a href="{% include github-link.html %}" class="text-white no-underline hover:underline font-light" target="_blank">{{ text.footer-github-text }}</a>
                                     {% endif %}
                             </p>
