--- a/_includes/github-link.html
+++ b/_includes/github-link.html
@@ -1,7 +1,3 @@
 {% assign path_splitted = page.path | split: '/' %}
 {% assign folder_name = path_splitted[1] %}
-{% if include.extensions == 'true' %}
-    {{ site.language[page.lang].footer-extensions-github-url }}{{ folder_name | strip }}
-{$ else %}
-    {{ site.language[page.lang].footer-templates-github-url }}{{ folder_name | strip }}
-{% endif %}
+{{ include.base }}{{ folder_name | strip }}
