--- a/_includes/cookie_alert.html
+++ b/_includes/cookie_alert.html
@@ -254,7 +254,7 @@
             mtm.textContent = "var _mtm = window._mtm = window._mtm || [];" +
                 " _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});" +
                 " var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];" +
-                " g.async=true; g.src='https://cdn.matomo.cloud/peakboard.matomo.cloud/container_" + "{{ site.mtm }}" + ".js'; s.parentNode.insertBefore(g,s);";
+                " g.async=true; g.src='https://matomo.peakboard.com/js/container_" + "{{ site.mtm }}" + ".js'; s.parentNode.insertBefore(g,s);";
             head.appendChild(mtm);
 
             var theHTMLToInsert = '<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm }}"' +
