--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                     <div class="mr-12 mt-12 md:mt-0">
                         <h3 class="mb-4 font-title border-b border-grey-light text-3xl text-white dot">{{ text.footer-support }}</h3>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-tel }}
-                            <a href="tel:004971146059961" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 - 61</a>
+                            <a href="tel:004971146059961" class="text-white no-underline hover:underline font-light">+49 71140261000</a>
                         </p>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-email }}
                             <a href="mailto:support@peakboard.com" class="text-white no-underline hover:underline font-light">support@peakboard.com</a>
