--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,14 @@
 <meta property="og:image" content="{{ site.url }}/{{ page.ref }}/{{ page.image }}">
 {% endif %}
 
+<script>
+    var _mtm = window._mtm = window._mtm || [];
+    _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://matomo.peakboard.com/js/container_{{ site.mtm }}.js'; s.parentNode.insertBefore(g,s);
+</script>
+
 {% seo title=false %}
 
 {% include cookie_alert.html %}
