--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,9 +32,10 @@
 <script>
     var _mtm = window._mtm = window._mtm || [];
     _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
-
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src='https://matomo.peakboard.com/js/container_{{ site.mtm }}.js'; s.parentNode.insertBefore(g,s);
+    (function() {
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src='https://matomo.peakboard.com/js/container_{{ site.mtm }}.js'; s.parentNode.insertBefore(g,s);
+    })();
 </script>
 
 {% seo title=false %}
